--- a/configs/train.yaml.template
+++ b/configs/train.yaml.template
@@ -1,10 +1,7 @@
 system:
   model_name: MNISTModel
   run_name: demo_run
-  log_interval: 5
-  output: "exps"
-  desc: "it's a demo."
-  seed: 1234
+
 
 
 model:
@@ -34,9 +31,19 @@ model:
     name: "PassThoughStructurer"
     args: {}
 
-train:
-  epochs: 300
+trainer:
 
+  epochs: 300
+  log_interval: 5
+  output_dir: "exps"
+  desc: "it's a demo."
+  seed: 1234
+  gpus: [0]
+  log_gpu_memory: 'all'
+
+  loggers:
+     tensorboard: True
+     wandb: True
 
   optim:
     name: Adam
@@ -49,17 +56,7 @@ train:
 
   checkpoints:
     name: "InfoExtractor"
-    monitor_start: 0.5
-
-val:
-  batch_size: 8
-  loader_workers: 2
-  interval: 1
-  interval_iter: 0
-
-test:
-  batch_size: 8
-  loader_workers: 2
+    monitor
 
 data:
   train:
