--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pytorch-lightning = "^1.2.6"
 anyconfig = "^0.10.0"
 torchvision = "^0.9.1"
 easydict = "*"
+Jinja2 = "^2.11.3"
 
 [tool.poetry.dev-dependencies]
 ipython = "^7.22.0"
